DHW-93 Fix alignment [Care for Caregiver] Section 1

--- a/src/styles/pages/home-care.scss
+++ b/src/styles/pages/home-care.scss
@@ -303,10 +303,13 @@
         font-weight: 700;
         line-height: 55px;
         margin-bottom: 16px;
+        text-align: left;
 
         @media screen and (max-width: $break-tablet) {
             font-size: 32px;
             line-height: 44px;
+            text-align: center;
+         
         }
 
     }
